[package]
name = "nox-cvms-exporter-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
